# trainee_task

./: Dockerfile  Dockerfile_test  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  requirements.txt  run_celery.sh  run_migr.sh  run_server.sh  run_tests.sh
.github/workflows/: ci_innotter.yaml
enum_class/: role.py
innotter/: aws_service.py  celery.py  email_service.py  enum_classes.py  middleware.py  producer.py  pydantic_models.py  settings.py  urls.py
innotter/tests/: test_aws_s3.py  test_aws_ses.py
page/: admin.py  models.py  urls.py  views.py
page/migrations/: 0001_initial.py  0002_initial.py  0003_remove_page_id_remove_tag_id_tag_uuid_and_more.py  0004_alter_page_uuid_alter_tag_uuid.py  0005_alter_tag_name.py  0006_alter_tag_name.py  0007_alter_page_tags_alter_page_uuid_alter_tag_uuid.py  0008_page_is_blocked.py
page/permissions/: page_user_permission.py
page/routers/: routers.py
page/serializers/: page_moderator_serializer.py  page_serializer.py  page_serializer_moderator.py  page_serializer_update.py  serializers.py  tag_serializer.py
post/: admin.py  models.py  tasks.py  urls.py  views.py
post/migrations/: 0001_initial.py  0002_initial.py  0003_remove_post_id_post_uuid.py  0004_alter_post_uuid.py  0005_alter_post_uuid.py  0006_alter_post_reply_to.py  0007_comment.py  0008_delete_comment.py  0009_comment.py  0010_delete_comment.py  0011_comment.py  0012_remove_post_likes_post_likes.py  0015_delete_likes.py  (+11 more)
services/: upload_to_s3.py  upload_to_s3_user.py
user/: admin.py  models.py  urls.py  views.py
(+20 files in other folders)
