[tool.poetry]
name = "first"
version = "0.1.0"
description = ""
authors = ["…"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.2"
celery = "^5.2.7"
pyjwt = "^2.5.0"
djangorestframework = "^3.14.0"
python-dotenv = "^0.21.0"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"